--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,24 @@
     width: 100%;
 }
 
+.footer_cadastro{
+    background-color: #F1F1F1;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
 .footer_area{
     padding: 20px;
 }
 
 .footer img{
+    float: right;
+    padding-right: 20px;
+}
+
+.footer_cadastro img{
     float: right;
     padding-right: 20px;
 }
@@ -121,7 +134,7 @@
         display: none;
     }
 
-    .footer_area{
+    .footer_cadastro{
         position: relative;
     }
 }
@@ -149,6 +162,10 @@
     .img{
         width: 450px;
     }
+
+    .footer_cadastro{
+        position: fixed;
+    }
     
 }
 
@@ -162,5 +179,7 @@
         float: right;
     }
 
-    
+    .footer_cadastro{
+        position: fixed;
+    }
 }
