--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@
     width: 250px;
 }
 
+#favoritos img{
+    width: 250px;
+}
+
 .main_aluno{
     padding: 70px;
     background-color: lightgray;
